+ changes in section and card + fix scrollbar

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -59,13 +59,3 @@
       @apply font-rubik font-normal text-base
    }
 }
-
-
-::-webkit-scrollbar {
-   width: 0; 
-   background: transparent;  
-}
-
-::-webkit-scrollbar-thumb {
-   background: transparent;
-}
